--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -134,10 +134,11 @@ curve <- ggplot(aes(x = age, y = diss), data = rf) +
 
 points <- ggplot(data = data.frame(map), aes(long, lat)) + 
   geom_path(aes(group=group), color='black') +
-  geom_point(data = rf[rf$diss > ninefive, ], aes(x = long, y = lat), alpha=0.2, color = 'red') +
+  geom_point(data = rf[rf$diss > quantile(rf$diss, 0.95), ], 
+             aes(x = long, y = lat), alpha=0.2, color = 'red') +
   coord_map(xlim=c(-100, -40), ylim=c(21, 65)) + theme_bw()
 
-grid.arrange(curve, points)
+curve
 
 ```
 **Figure 3**. *Turnover through time in the Neotoma database.*
