Added a mind map for the program Docear, part of something I thought I'd try.  Did edits to the introduction, I tried to set it up a bit more clearly, to point out some clear hypotheses we might test.

--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -6,11 +6,29 @@ Abstract
 
 Introduction
 ------------------------
-Our investigation of non-analogues, both in the past and in the future is tied to differences from modern pollen data.  THe concern with a future of no-analogues is tied to our lack of understanding, both in how the process of change will unfold, and in how ecosystem services are provided by these vegetation communities for which we have no analogue.
+Our investigation of non-analogue vegetation, both in the past and in the future is tied to differences from modern conditions (Williams and Jackson, 2007).  A major concern with no-analogue climate in the future is the development of forest communities for which we have no modern analogues as tree species respond individualistically to changing climatic conditions. No-analogues provide a challenge for ecologists, land managers and conservationists, tied to our lack of understanding, both in how the process of change will unfold, and in how ecosystem services are provided by these vegetation communities for which we have no analogue.
+
+Estimates of dissimilarity and turnover in paleoecological records have been used to give us an indication of the novelty of ecosystems with respect to modern vegetation, or to provide information about how much change occurs through time within a record (Williams et al., 2001), often relating these changes to climate.  The challenge in this case is that, as with modern ecosystems, changes in pollen composition at one location may represent points along a successional trajectory, where each time point represents significant compositional turnover, but, relative to the surrounding, heterogeneous landscape, very little change in forest composition occurs.  Thus turnover as a single metric can provide results that are not uniquely tied to overall, landscape scale, changes in vegetation.
+
+In a similar way, dissimilarity of past pollen assemblages with respect to modern pollen (d<sub>m</sub>) cannot indicate changes from one community type to another through time, only dissimilarity from modern ecosystems.  While broad scale spatial changes may be visible, a site that transitions from prairie to forest can retain a similarly low d<sub>m</sub> value, provided near analogues exist in the modern pollen data.  A significant challenge is the fact that in many cases modern pollen reflects an anthropogenic alteration of the landscape relative to fossil assemblages.  The presence of taxa such as Artemisa point to significant opening of woodland canopies for example [REF].
+
+A fuller understanding of vegetation change, and of successional processes may be derived from the use of multiple metrics for vegetation change using pollen data. Three dissimilarity measures can be used to help us understand changes through time:
+1.  Dissimilarity from modern.
+2.  Turnover with an individual core.
+3.  Turnover with respect to the surrounding landscape.
+
+Dissimilarity from modern has been widely used in the paleoecological literature, it represent a measure of how different past ecosystems were to modern.  High dissimilarities are most common in North America at ~14kyr, when it is presumed that a combination of climatic and biotic factors gave rise to new vegetation communities, communities that have no modern analogue.
+
+Turnover within a core just tells you how different one time period is to the next.
+
+Landscape turnover has not been previously used.  It is a measure of how different an assemblage at one time period is to all pollen assemblages within a previous time period.  In this sense, it is an estimate of how novel an ecosystem is with respect to all ecosystems that previously occupied the landscape.  In a sense it is d<sub>m</sub> turned on its head.
 
 To assist in this endevour, we examine pollen records from the Neotoma Database, searching through the past, from the late-glacial to the modern to examine in which cases pollen assemblages appear to be non-analogue from the previous time period.  The conceptual framework suggests that we were looking at landscape level turnover, not site turnover.  While site-level turnover is a commonly used metric in paleoecological analysis, it is hampered by its sensitivity to stochastic effects.  Large scale changes in vegetation at a single site might not reflect the kinds of broad scale community change we expect to see under conditions of future climate change.  As such, comparing dissimilarity at a site to changes at a number of sites across the continent provides a better metric of landscape-scale dissimilarity.
 
-**Figure 1**. *Some sort of figure showing the conceptual difference between change at the site vs. change at the landscape.*
+![Alt text](/HandMadeFigures/ConceptualPlot.png)
+**Figure 1**. *Turnover estimates for time t_i are measured as the minimum within site dissimilarity from the prior timestep (d_si) or the minimum dissimilarity from the landscape of pollen assemblages at the earlier timestep (d_li).  In all cases the earlier timestep is defined as a time preiod between 250 and 750 years prior to the sample of interest.  These two values then form a continuum of possibilities.  High ds and low dl indicate disturbance events within a stable, heterogeneous landscape, high dl & high ds indicate broad-scale, rapid landscape turnover, high dl, low ds is relatively infrequent, but may indicate local refugia within a shifting landscape*
+
+We expect that ecosystems will show patterns of change that can be explained through the multivariate use of these dissimilarity measures.  For example, rapid species migration during the late-Pleistocene/eraly-Holocene transition should be apparent as high local turnover partnered with relatively low landscape change if entire communities are migrating northward.  Strongly individualistic species responses would be visible as paired high site and landscape turnovers.  Modern successional changes should be visible as sets of high self, low landscape changes.  Low landscape and low self changes should be static ecosystems.
 
 Methods
 ------------------------
@@ -50,12 +68,12 @@ indiv.sites$province <- as.character(extract.eco$PROVINCE)
 
 map <- map_data('world')
 
-map <- subset(map, map$long > -100 & map$long < -59)
-map <- subset(map, map$lat > 20 & map$lat < 50)
+map <- subset(map, map$long > -100 & map$long < -45)
+map <- subset(map, map$lat > 20 & map$lat < 65)
 
 points <- ggplot(data = data.frame(map), aes(long, lat)) + geom_path(aes(group=group), color='black') +
   geom_point(data = indiv.sites, aes(x = long, y = lat, size = samples), alpha=0.5) +
-  coord_map(xlim=c(-100, -40), ylim=c(21, 65)) + theme_bw()
+  coord_map(xlim=c(-100, -45), ylim=c(21, 65)) + theme_bw() + scale_x_continuous(expand = c(0,0))
 
 bins <- ggplot(compiled.pollen) + 
           geom_bar(aes(x = age), 
@@ -106,6 +124,7 @@ rf <- data.frame(age = rep.frame$age,
                  dataset = rep.frame$dataset,
                  diss = rowMeans(rep.frame[ ,8:ncol(rep.frame)], na.rm=TRUE),
                  self = rep.frame$self.min,
+                 land = rep.frame$landscape.min,
                  min = rep.frame$min.dist,
                  size = rep.frame$sample.size,
                  nf = 'black',
