--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -4,6 +4,8 @@ No-Analogues in North American Pollen Space
 Abstract
 ------------------------
 
+Local vs. regional turnover.  Transient novelty? Temporally adjacent novelty (TAN)?
+
 Introduction
 ------------------------
 Our investigation of non-analogue vegetation, both in the past and in the future is tied to differences from modern conditions (Williams and Jackson, 2007).  A major concern with no-analogue climate in the future is the development of forest communities for which we have no modern analogues as tree species respond individualistically to changing climatic conditions. No-analogues provide a challenge for ecologists, land managers and conservationists, tied to our lack of understanding, both in how the process of change will unfold, and in how ecosystem services are provided by these vegetation communities for which we have no analogue.
@@ -37,6 +39,11 @@ We compile records of pollen from depositional records in the Neotoma Database. 
 ```{r checkFileCreation, echo=FALSE, warning=FALSE, message=FALSE}
 
 source('R/load_datasets.R')
+
+p <- function(x) {
+  x <- round(x, -floor(log(x, 10)) + 2)
+  prettyNum(x=x, big.mark=',')
+}
 
 create_date <- file.info('data//compiled.pollen.RData')$mtime  
 
@@ -108,6 +115,26 @@ Results
 Pollen samples:
 Of the `r length(unique(compiled.pollen$sitename))` pollen sites obtained from Neotoma for this analysis, `r length(unique(compiled.pollen$sitename[!is.na(rep.frame[,3])]))` sites had assemblages that met our criteria.  For these sites there were 18850 unique assemblages spanning the last 21kyr, approximately 90% of the total assemblages for the sites that met our criteria.  Samples excluded from analysis occur throughout the record
 
+Self and Landscape Dissimilarity:
+```{r test, warning= FALSE, echo=FALSE, message=FALSE, fig.height=5, fig.width=5}
+cor.est <- cor.test(rf$land, rf$self, use = 'pairwise.complete.obs', method='spearman')
+
+ggplot(rf, aes(x = land, y = self)) + 
+  geom_point(alpha = 0.5, aes(color = division)) + 
+  scale_x_log10() + 
+  scale_y_log10() + 
+  geom_abline() + 
+  coord_fixed(ratio=1) +
+  xlab('Landscape Dissimilarity') +
+  ylab('Site Turnover') +
+  theme_bw() +
+  theme(axis.text = element_text(size = 12, family = 'serif'),
+        axis.title = element_text(size = 16, family = 'serif', face = 'bold'))
+
+```
+**Figure X**. *Turnover and dissimilarity for individual pollen records from the Neotoma database, shows a relationship between the two variables, but also considerable noise.*
+
+Turnover within the core is correlated to landscape dissimilarity (r<sub>s</sub> = `r p(cor.est$estimate)`, p < 0.001), but shows a great deal of variability around the 1:1 line (Figure X).  
 The analysis produces a somewhat surprising result.  While dissimilarity is high at the beginning of the Holocene, the most rapid rise in turnover occurs in the modern era, even though the density of sites is higher at this time.  High turnovers are seen at 10kyr, between 6 and 7 kyr and then again in the modern period.  While the no-analogue period of the late-glacial has high dissimilarity in relation to modern time, the actual turnover is not significantly higher than during the Holocene transition.
 
 
@@ -136,8 +163,15 @@ rf <- data.frame(age = rep.frame$age,
 
 rf <- rf[!is.na(rf$diss),]
 
-#  This re-assigns ecozones for points:
+#  A number of sites have either Lake assignments (they are in the Great Lakes) or 
+#  NA assignments (they are on the coastline, and don't fall within the ecozone
+#  shapefile).  This re-assigns values for these points.
+#  This also removes te "Humid Tropical" ecozone because these samples only span the
+#  last 4500 years.  Not a long enough record.
+
 source('R/data_cleaning.R')
+
+#  The Humid Tropical Domain
 
 for(i in 1:1500){
   #  This loop basically pulls out the 95% CI samples.
@@ -161,8 +195,8 @@ curve <- ggplot(aes(x = age, y = diss), data = rf[what,]) +
         axis.text = element_text(family='serif', size=16),
         legend.position = 'none') +
   xlab('Radiocarbon Years Before Present') +
-  ylab('Landscape Dissimilarity') #+
-  #facet_wrap(~domain, ncol = 2)
+  ylab('Landscape Dissimilarity') +
+  facet_wrap(~domain, ncol = 2)
 
 
 points <- ggplot(data = data.frame(map), aes(long, lat)) + 
@@ -177,6 +211,24 @@ curve
 ```
 **Figure 3**. *Turnover through time in the Neotoma database.*
 
+```{r SignifModels}
+
+#  This is some basic hypothesis testing.  We're interested in knowing how much these change.
+model0 <- gam(log(self,10) ~ 1, family = gaussian, 
+              data = rf[rf$age < 15000 & rf$age > -50, ])
+model1 <- gam(log(self,10) ~ s(age), family = gaussian, 
+              data = rf[rf$age < 15000 & rf$age > -50, ])
+model1.500 <- gam(log(self,10) ~ s(age, k = 40), family = gaussian, 
+                  data = rf[rf$age < 15000 & rf$age > -50, ])
+
+model2.500 <- gam(log(self,10) ~ s(age, k = 40, by = factor(domain)), family = gaussian, 
+                  data = rf[rf$age < 15000 & rf$age > -50, ])
+
+model3.500 <- gam(log(self,10) ~ s(age, k = 40, by = factor(division)), 
+                  family = gaussian, 
+                  data = rf[rf$age < 15000 & rf$age > -50, ])
+
+```
 
 Discussion
 ---------------------------
