--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -3,7 +3,12 @@ No-Analogues in North American Pollen Space
 
 Abstract
 ------------------------
-Local vs. regional turnover.  Transient novelty? Temporally adjacent novelty (TAN)?
+
+* Most past modern-analog analyses look for novelty relative to present day.
+
+* But now we are concerned about novelty during 20th century.  Both equilibrial and disequilibrial.
+
+* General paradigm that species respond individualistically to climate change.  But this isn’t necessarily always the case.  Under what conditions do we see new communities arise?  When do communities persist?
 
 Introduction
 ------------------------
@@ -12,6 +17,13 @@ Our investigation of non-analogue vegetation, both in the past and in the future
 Estimates of dissimilarity and turnover in paleoecological records have been used to give us an indication of the novelty of ecosystems with respect to modern vegetation, or to provide information about how much change occurs through time within a record (Williams et al., 2001), often relating these changes to climate.  The challenge in this case is that, as with modern ecosystems, changes in pollen composition at one location may represent points along a successional trajectory, where each time point represents significant compositional turnover, but, relative to the surrounding, heterogeneous landscape, very little change in forest composition occurs.  Thus turnover as a single metric can provide results that are not uniquely tied to overall, landscape scale, changes in vegetation.
 
 In a similar way, dissimilarity of past pollen assemblages with respect to modern pollen (d<sub>m</sub>) cannot indicate changes from one community type to another through time, only dissimilarity from modern ecosystems.  While broad scale spatial changes may be visible, a site that transitions from prairie to forest can retain a similarly low d<sub>m</sub> value, provided near analogues exist in the modern pollen data.  A significant challenge is the fact that in many cases modern pollen reflects an anthropogenic alteration of the landscape relative to fossil assemblages.  The presence of taxa such as Artemisa point to significant opening of woodland canopies for example [REF].
+
+**Table**. *Definitions for dissimilarity measures tested in this paper.*
+Dissimilarity Type | Definition
+------------------ | -----------
+Transient novelty  | The dissimilarity measure between a pollen assemblage and all pollen assemblages between 250 and 500 years older, excepting samples from the site.
+Site turnover      | The dissimilarity measure between a pollen assemblage and all pollen assemblages from the same site between 250 and 750 years older.
+Persistence        | The dissimilarity measure between a pollen assemblage and future assemblages, between 250 and 750 years younger.
 
 A fuller understanding of vegetation change, and of successional processes may be derived from the use of multiple metrics for vegetation change using pollen data. Three dissimilarity measures can be used to help us understand changes through time:
 1.  Dissimilarity from modern.
