--- a/Goringetal_NonAnalogueAssemblages.Rmd
+++ b/Goringetal_NonAnalogueAssemblages.Rmd
@@ -6,7 +6,7 @@ Abstract
 
 * Most past modern-analog analyses look for novelty relative to present day.
 
-* But now we are concerned about novelty during 20th century.  Both equilibrial and disequilibrial.
+* But now we are concerned about novelty during 21st century.  Both equilibrial and disequilibrial.
 
 * General paradigm that species respond individualistically to climate change.  But this isn’t necessarily always the case.  Under what conditions do we see new communities arise?  When do communities persist?
 
@@ -16,7 +16,7 @@ Our investigation of non-analogue vegetation, both in the past and in the future
 
 Estimates of dissimilarity and turnover in paleoecological records have been used to give us an indication of the novelty of ecosystems with respect to modern vegetation, or to provide information about how much change occurs through time within a record (Williams et al., 2001), often relating these changes to climate.  The challenge in this case is that, as with modern ecosystems, changes in pollen composition at one location may represent points along a successional trajectory, where each time point represents significant compositional turnover, but, relative to the surrounding, heterogeneous landscape, very little change in forest composition occurs.  Thus turnover as a single metric can provide results that are not uniquely tied to overall, landscape scale, changes in vegetation.
 
-In a similar way, dissimilarity of past pollen assemblages with respect to modern pollen (d<sub>m</sub>) cannot indicate changes from one community type to another through time, only dissimilarity from modern ecosystems.  While broad scale spatial changes may be visible, a site that transitions from prairie to forest can retain a similarly low d<sub>m</sub> value, provided near analogues exist in the modern pollen data.  A significant challenge is the fact that in many cases modern pollen reflects an anthropogenic alteration of the landscape relative to fossil assemblages.  The presence of taxa such as Artemisa point to significant opening of woodland canopies for example [REF].
+In a similar way, dissimilarity of past pollen assemblages with respect to modern pollen ($d_{m}$) cannot indicate changes from one community type to another through time, only dissimilarity from modern ecosystems.  While broad scale spatial changes may be visible, a site that transitions from prairie to forest can retain a similarly low $d_{m}$> value, provided near analogues exist in the modern pollen data.  A significant challenge is the fact that in many cases modern pollen reflects an anthropogenic alteration of the landscape relative to fossil assemblages.  The presence of taxa such as Artemisa point to significant opening of woodland canopies for example [REF].
 
 **Table**. *Definitions for dissimilarity measures tested in this paper.*
 Dissimilarity Type | Definition
@@ -75,7 +75,7 @@ ecoregions <- spTransform(readOGR('data/Ecoregions_NA/na_regns.shp', 'na_regns')
 ecoregions <- ecoregions[!ecoregions@data$DIVISION == 'Lake',]
 
 indiv.sites <- data.frame(site = unique(compiled.pollen$sitename),
-                          compiled.pollen[!duplicated(compiled.pollen$sitename), 4:5],
+                          compiled.pollen[!duplicated(compiled.pollen$sitename), c('lat', 'long')],
                           samples = as.vector(table(compiled.pollen$sitename)))
 
 extract.eco <- over(SpatialPoints(indiv.sites[,3:2], proj4string=CRS(proj4string(ecoregions))), ecoregions)
@@ -128,12 +128,23 @@ Of the `r length(unique(compiled.pollen$sitename))` pollen sites obtained from N
 
 Self and Landscape Dissimilarity:
 ```{r test, warning= FALSE, echo=FALSE, message=FALSE, fig.height=5, fig.width=5}
-cor.est <- cor.test(rf$land, rf$self, use = 'pairwise.complete.obs', method='spearman')
 
-ggplot(rf, aes(x = land, y = self)) + 
-  geom_point(alpha = 0.5, aes(color = division)) + 
-  scale_x_log10() + 
-  scale_y_log10() + 
+library(reshape2)
+
+cross.plot <- dcast(pollen.frame, 
+                    list(.(site, age, direction), .(self)),
+                    value.var = 'min', 
+                    fun.aggregate = function(x)mean(x, na.rm=TRUE))
+
+colnames(cross.plot)[4:5] <- c('self', 'land')
+
+cor.est <- cor.test(cross.plot$self, cross.plot$land, use = 'pairwise.complete.obs', method='spearman')
+
+ggplot(cross.plot, aes(x = land, y = self,color = direction)) + 
+  geom_point(alpha = 0.1) + 
+  stat_smooth(method='lm') +
+  scale_x_log10(expand=c(0,0)) + 
+  scale_y_log10(expand=c(0,0)) + 
   geom_abline() + 
   coord_fixed(ratio=1) +
   xlab('Landscape Dissimilarity') +
@@ -145,7 +156,7 @@ ggplot(rf, aes(x = land, y = self)) +
 ```
 **Figure X**. *Turnover and dissimilarity for individual pollen records from the Neotoma database, shows a relationship between the two variables, but also considerable noise.*
 
-Turnover within the core is correlated to landscape dissimilarity (r<sub>s</sub> = `r p(cor.est$estimate)`, p < 0.001), but shows a great deal of variability around the 1:1 line (Figure X).  
+Turnover within the core is correlated to landscape dissimilarity ($r_{s}$ = `r p(cor.est$estimate)`, p < 0.001), but shows a great deal of variability around the 1:1 line (Figure X).  
 The analysis produces a somewhat surprising result.  While dissimilarity is high at the beginning of the Holocene, the most rapid rise in turnover occurs in the modern era, even though the density of sites is higher at this time.  High turnovers are seen at 10kyr, between 6 and 7 kyr and then again in the modern period.  While the no-analogue period of the late-glacial has high dissimilarity in relation to modern time, the actual turnover is not significantly higher than during the Holocene transition.
 
 
@@ -153,31 +164,25 @@ The analysis produces a somewhat surprising result.  While dissimilarity is high
 
 library(mgcv)
 
-compiled.to.indiv <- match(compiled.pollen$sitename, indiv.sites$site)
+compiled.to.indiv <- match(pollen.frame$site, indiv.sites$site)
+compiled.to.compiled <- match(pollen.frame$site, compiled.pollen$sitename)
 
-rf <- data.frame(age = rep.frame$age,
-                 lat = compiled.pollen$lat,
-                 long = compiled.pollen$long,
-                 site = rep.frame$site,
-                 dataset = rep.frame$dataset,
-                 diss = rowMeans(rep.frame[ ,8:ncol(rep.frame)], na.rm=TRUE),
-                 self = rep.frame$self.min,
-                 land = rep.frame$landscape.min,
-                 min = rep.frame$min.dist,
-                 size = rep.frame$sample.size,
-                 nf = 'black',
-                 domain = indiv.sites$domain[compiled.to.indiv],
-                 division = indiv.sites$division[compiled.to.indiv],
-                 province = indiv.sites$province[compiled.to.indiv],
-                 was.na = FALSE,
-                 stringsAsFactors = FALSE)
+pollen.frame <- data.frame(pollen.frame,
+                           lat = compiled.pollen$lat[compiled.to.indiv],
+                           long = compiled.pollen$long[compiled.to.indiv],
+                           age.model = compiled.pollen$date.type[compiled.to.compiled],
+                           domain = indiv.sites$domain[compiled.to.indiv],
+                           division = indiv.sites$division[compiled.to.indiv],
+                           province = indiv.sites$province[compiled.to.indiv],
+                           was.na = FALSE,
+                           stringsAsFactors = FALSE)
 
-rf <- rf[!is.na(rf$diss),]
+pollen.frame <- pollen.frame[!is.na(pollen.frame$min),]
 
 #  A number of sites have either Lake assignments (they are in the Great Lakes) or 
 #  NA assignments (they are on the coastline, and don't fall within the ecozone
 #  shapefile).  This re-assigns values for these points.
-#  This also removes te "Humid Tropical" ecozone because these samples only span the
+#  This also removes the "Humid Tropical" ecozone because these samples only span the
 #  last 4500 years.  Not a long enough record.
 
 source('R/data_cleaning.R')
@@ -185,17 +190,21 @@ source('R/data_cleaning.R')
 #  The Humid Tropical Domain
 
 for(i in 1:1500){
-  #  This loop basically pulls out the 95% CI samples.
-  age.class <- rf$age %in% (i*10):((i*10)+500)
-  aa <- quantile(rf$diss[age.class], probs=0.90, na.rm=TRUE)
-  rf$nf[age.class & rf$diss > aa] <- 'red'
+  #  This loop pulls out the 95% CI samples within 500 year time steps at 10 year intervals.
+  #  This means that if a sample is outside the 95% ci for the 500 years within any 10 year
+  #  timestep that covers the 500 year period it will be marked.
+  
+  age.class <- pollen.frame$age %in% (i*10):((i*10)+500)
+  aa <- quantile(pollen.frame$min[age.class], probs=0.90, na.rm=TRUE)
+  pollen.frame$nf[age.class & pollen.frame$min > aa] <- 'red'
 }
 
-what <- rf$domain %in% c('HUMID TEMPERATE DOMAIN')
+what <- pollen.frame$domain %in% c('HUMID TEMPERATE DOMAIN') &
+  !pollen.frame$age.model %in% c('Radiocarbon years BP')
 
-curve <- ggplot(aes(x = age, y = diss), data = rf[what,]) + 
-  geom_point(aes(alpha = nf, color = nf)) +
-  scale_color_identity() +
+curve <- ggplot(aes(x = age, y = min), data = pollen.frame[what,]) + 
+  geom_point(aes(color = nf)) +
+  #scale_color_identity() +
   geom_smooth(formula = y ~ s(x, k = 40), method='gam', family = Gamma, size = 2) +
   geom_smooth(formula = y ~ s(x, k = 40), 
               method='gam', family = Gamma, size = 1, color = 'black', linetype = 2) +
@@ -206,14 +215,13 @@ curve <- ggplot(aes(x = age, y = diss), data = rf[what,]) +
         axis.text = element_text(family='serif', size=16),
         legend.position = 'none') +
   xlab('Radiocarbon Years Before Present') +
-  ylab('Landscape Dissimilarity')# +
-  facet_wrap(~domain, ncol = 2)
-
+  ylab('Landscape Dissimilarity') +
+  facet_wrap(~self, ncol = 2)
 
 points <- ggplot(data = data.frame(map), aes(long, lat)) + 
   geom_path(aes(group=group), color='black') +
-  geom_point(data = rf[rf$diss > quantile(rf$diss, 0.95) & what, ], 
-             aes(x = long, y = lat, size = diss*10), alpha=0.2, color = 'red') +
+  geom_point(data = pollen.frame[pollen.frame$min > quantile(pollen.frame$min, 0.95) & what, ], 
+             aes(x = long, y = lat, size = min*10), alpha=0.2, color = 'red') +
   scale_size_identity() +
   coord_map(xlim=c(-100, -59), ylim=c(21, 50)) + theme_bw()
 
@@ -225,19 +233,19 @@ curve
 ```{r SignifModels}
 
 #  This is some basic hypothesis testing.  We're interested in knowing how much these change.
-model0 <- gam(log(self,10) ~ 1, family = gaussian, 
-              data = rf[rf$age < 15000 & rf$age > -50, ])
+model0 <- gam(log(dis,10) ~ 1, family = gaussian, 
+              data = rf[pollen.frame$age < 15000 & pollen.frame$age > -50, ])
 model1 <- gam(log(self,10) ~ s(age), family = gaussian, 
-              data = rf[rf$age < 15000 & rf$age > -50, ])
+              data = rf[pollen.frame$age < 15000 & pollen.frame$age > -50, ])
 model1.500 <- gam(log(self,10) ~ s(age, k = 40), family = gaussian, 
-                  data = rf[rf$age < 15000 & rf$age > -50, ])
+                  data = rf[pollen.frame$age < 15000 & pollen.frame$age > -50, ])
 
 model2.500 <- gam(log(self,10) ~ s(age, k = 40, by = factor(domain)), family = gaussian, 
-                  data = rf[rf$age < 15000 & rf$age > -50, ])
+                  data = rf[pollen.frame$age < 15000 & pollen.frame$age > -50, ])
 
 model3.500 <- gam(log(self,10) ~ s(age, k = 40, by = factor(division)), 
                   family = gaussian, 
-                  data = rf[rf$age < 15000 & rf$age > -50, ])
+                  data = rf[pollen.frame$age < 15000 & pollen.frame$age > -50, ])
 
 ```
 
